<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="#6F897E9E">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="400dp"
        android:layout_height="200dp"
        android:layout_marginBottom="300dp"
        android:src="@drawable/flower"
        tools:ignore="MissingConstraints" />



    <TextView
        android:id="@+id/title_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="450dp"
        android:text="@string/session_check_in"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/reflect_on_your_feeling"
        android:textColor="#319842"
        android:textSize="24sp"
        android:textStyle="bold"
        android:layout_marginBottom="400dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>


    <TextView
        android:id="@+id/instruction"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
       android:layout_marginBottom="300dp"
        android:text="@string/take_a_few_moment_and_answer_a_few_questions_before_moving_to_the_next_exercise"
        android:textSize="14sp"
        android:gravity="center"
       app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <Button
        android:id="@+id/checkin"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="Start Check in"
        android:textColor="@color/white"
        android:backgroundTint="#000"
       app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:flow_horizontalBias="0.5"
        tools:ignore="MissingConstraints"
        android:layout_marginBottom="200dp"

        />

    <Button
        android:id="@+id/Later"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/later"
        android:textColor="@color/white"
        android:backgroundTint="#8E8181"
        app:layout_constraintTop_toBottomOf="@id/checkin"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:flow_horizontalBias="0.5"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/noteText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/note_that_you_won_t_be_able_to_proceed_to_the_next_touch_session_unless_you_complete_the_checkin"
        android:textSize="12sp"
        android:gravity="center"
       app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginBottom="40dp"
        android:textStyle="bold"/>









</androidx.constraintlayout.widget.ConstraintLayout>